--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="w-2/3 flex flex-col">
-          <p class="text-justify">
+          <p class="text-2xl text-justify">
             Hi, I'm Lintang Aura Syufee, Information Systems student at Jember
             University. With high curiosity, I like to learn new things to
             improve my skills. I have good public speaking and problem solving
@@ -68,7 +68,7 @@
             systems analyst and project manager.
           </p>
 
-          <p class="font-bold text-2xl mt-6">Certificates</p>
+          <p class="font-bold text-6xl mt-6">Certificates</p>
 
           <div
             class="h-80 border rounded-md mt-3 grid grid-cols-2 gap-2 overflow-auto"
