--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,7 @@
   
             <a
               href="https://www.linkedin.com/in/lintangaura/"
+              target="_blank"
               class="border px-3 py-1.5 text-center rounded-md self-start hover:bg-white hover:text-black text-white"
               >Visit</a
             >
@@ -170,6 +171,7 @@
   
             <a
               href="https://github.com/lintangaura"
+              target="_blank"
               class="border px-3 py-1.5 text-center rounded-md self-start hover:bg-white hover:text-black"
               >Visit</a
             >
