--- a/index.html
+++ b/index.html
@@ -57,8 +57,49 @@
           Page 01 <span class="text-gray-400">/ 05</span>
         </div>
         <div class="flex flex-col justify-center w-1/2">
-          <p>Hello, my name is</p>
+          <p class="text-3xl">Hello, my name is</p>
           <p class="text-6xl font-bold">Lintang Aura Syufee</p>
+
+          <div class="flex flex-col mt-16">
+            <h2 class="text-2xl font-bold">Experience</h2>
+            <div class="grid grid-cols-2 gap-2 mt-4">
+              <div class="p-4 rounded-md border">
+                <p class="font-bold">PSDM Division Staff</p>
+                <i>Himpunan Mahasiswa Sistem Informasi (Himasif)</i>
+                <p>2021-2023</p>
+              </div>
+
+              <div class="p-4 rounded-md border">
+                <p class="font-bold">Head of Event</p>
+                <i>Himasif Training Center (HTC)</i>
+                <p>Mar 2022 - Jul 2022</p>
+              </div>
+
+              <div class="p-4 rounded-md border">
+                <p class="font-bold">Secretary</p>
+                <i>Welcoming Session</i>
+                <p>Jun 2022 - Sep 2022</p>
+              </div>
+
+              <div class="p-4 rounded-md border">
+                <p class="font-bold">Chairman of The Committe</p>
+                <i>IT Converts</i>
+                <p>Mar 2023 - Oct 2023</p>
+              </div>
+
+              <div class="p-4 rounded-md border">
+                <p class="font-bold">Secretary</p>
+                <i>Sarasehan & Inhofis 2023</i>
+                <p>Feb 2023 - Jun 2023</p>
+              </div>
+
+              <div class="p-4 rounded-md border">
+                <p class="font-bold">Mobile Developer</p>
+                <i>Studi Independen Bersertifikat | Bangkit Academy</i>
+                <p>Aug 2023 - Des 2023</p>
+              </div>
+            </div>
+          </div>
         </div>
 
         <img
@@ -66,49 +107,6 @@
           alt="Profile Image"
           class="object-cover h-1/5 rounded-md"
         />
-      </div>
-
-      <div class="flex flex-col items-center mt-4">
-        <h2 class="text-2xl font-bold">Experience</h2>
-        <div class="grid grid-cols-2 gap-2 mt-4">
-          <div class="p-4 rounded-md border">
-            <p class="font-bold">PSDM Division Staff</p>
-            <i>Himpunan Mahasiswa Sistem Informasi (Himasif)</i>
-            <p>2021-2023</p>
-          </div>
-
-          <div class="p-4 rounded-md border">
-            <p class="font-bold">Head of Event</p>
-            <i>Himasif Training Center (HTC)</i>
-            <p>Mar 2022 - Jul 2022</p>
-          </div>
-
-          <div class="p-4 rounded-md border">
-            <p class="font-bold">Staff of Public Relations</p>
-            <i>Himasif Discussion (HI-CUSSION)</i>
-            <p>Jun 2022 - Sep 2022</p>
-          </div>
-
-          <div class="p-4 rounded-md border">
-            <p class="font-bold">
-              Staff of Publicity and Documentation Division
-            </p>
-            <i>Gathering Sistem Informasi</i>
-            <p>May 2022 - Aug 2022</p>
-          </div>
-
-          <div class="p-4 rounded-md border">
-            <p class="font-bold">Secretary</p>
-            <i>Welcoming Session</i>
-            <p>Jun 2022 - Sep 2022</p>
-          </div>
-
-          <div class="p-4 rounded-md border">
-            <p class="font-bold">Chairman of The Committe</p>
-            <i>IT Converts</i>
-            <p>Mar 2023 - Oct 2023</p>
-          </div>
-        </div>
       </div>
 
       <div class="flex justify-end">
